fix line spacing in map location info

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -2,7 +2,7 @@
   max-width: 200px;
   word-wrap: break-word;
   p {
-    line-height: 1px;
+    margin: 0;
   }
 }
 
